hover and dashboard on load scrolling solved

--- a/src/app/sidenavbar/sidenavbar.component.html
+++ b/src/app/sidenavbar/sidenavbar.component.html
@@ -8,13 +8,13 @@
     <li *ngFor="let item of menuSidebar" #itemEl routerLinkActive="active">
       <div *ngIf="item.sub_menu.length == 0" class="dropdown-title">
         <a [routerLink]="[item.link]">
-          <i [class]="item.icon"></i>
+          <i [class]="item.icon" class="icons"> </i>
           <span class="link_name">{{item.link_name}}</span>
         </a>
       </div>
       <div *ngIf="item.sub_menu.length > 0" class="dropdown-title" (click)="showSubmenu(itemEl)">
         <a>
-          <i [class]="item.icon"></i>
+          <i [class]="item.icon" class="icons"></i>
     <li><a class="link_name">{{item.link_name}}</a></li>
     </a>
     <i class='bx bxs-chevron-down arrow'></i>
