--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -119,12 +119,11 @@
    <div class="p-2">
     <div class="card">
       <div class="d-flex bg-blue-100 ">
-        <span class="material-icons m-1 ">blur_on</span>
+        <span class="material-icons m-2 ">blur_on</span>
         <form [formGroup]="myForm" class="mt-2 d-flex">
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm.get('checked')?.value === false, 'tag-highlighted': myForm.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -143,7 +142,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm1.get('checked')?.value === false, 'tag-highlighted': myForm1.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm1.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -162,7 +160,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm2.get('checked')?.value === false, 'tag-highlighted': myForm2.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm2.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -181,7 +178,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm3.get('checked')?.value === false, 'tag-highlighted': myForm3.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm3.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -200,7 +196,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm4.get('checked')?.value === false, 'tag-highlighted': myForm4.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm4.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -219,7 +214,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm5.get('checked')?.value === false, 'tag-highlighted': myForm5.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm5.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -238,7 +232,6 @@
           <p-triStateCheckbox formControlName="checked" inputId="checked"></p-triStateCheckbox>
           <label for="checked"
             [ngClass]="{'tag-disabled': myForm6.get('checked')?.value === false, 'tag-highlighted': myForm6.get('checked')?.value === true}">
-            <!-- {{ myForm.value.checked === null ? 'null' : myForm.value.checked }} -->
           </label>
           <h6 [style.textDecoration]="myForm6.get('checked')?.value === false ? 'line-through' : 'none'"
             class="m-1 ms-2">
@@ -405,8 +398,8 @@
       <span class="material-icons m-2">calendar_month</span>
       <h5 class="mt-2 font-bold">calendar</h5>
     </ng-template>
-    <p-calendar [(ngModel)]="selectedDate" [inline]="true" class="text-center my-calendar"></p-calendar>
-
+    <!-- <p-calendar [(ngModel)]="date" [inline]="false" class="text-center my-calendar"></p-calendar> -->
+    <p-calendar [(ngModel)]="date" [inline]="true" [showWeek]="true" class="text-center my-calendar"></p-calendar>
   </p-panel>
 </div>
 
